# networks-homework

./: README.md  RES.md  SUMMARY.md  THEORY.md  pyproject.toml
output/: metrics_report.md  report.md
signal_plotter/: __init__.py  encoding_example.py  encodings.py  example.py  metrics.py  metrics_example.py  report_generator.py
tests/: test_encodings.py  test_metrics.py
